# BlogFrappe

./: README.md  pyproject.toml
.github/workflows/: .ci 2.yml.icloud  ci.yml
clocking_system/: hooks.py
clocking_system/clocking_system/clocking_system_dashboard/test_dash/: test_dash.json
clocking_system/clocking_system/doctype/clock_user/: clock_user.js  clock_user.json  clock_user.py  test_clock_user.py
clocking_system/clocking_system/doctype/clocking/: clocking.js  clocking.json  clocking.py  test_clocking.py
clocking_system/clocking_system/doctype/clocking_by_select/: clocking_by_select.js  clocking_by_select.json  clocking_by_select.py  test_clocking_by_select.py
clocking_system/clocking_system/doctype/clocking_by_text/: clocking_by_text.js  clocking_by_text.json  clocking_by_text.py  test_clocking_by_text.py
clocking_system/clocking_system/doctype/clocking_organization/: .clocking_organization 2.js.icloud  .clocking_organization 2.json.icloud  .clocking_organization 2.py.icloud  .test_clocking_organization 2.py.icloud  clocking_organization.js  clocking_organization.json  clocking_organization.py  test_clocking_organization.py
clocking_system/clocking_system/doctype/clocking_table/: clocking_table.json  clocking_table.py
clocking_system/clocking_system/report/clocking_report/: clocking_report.js  clocking_report.json  clocking_report.py
clocking_system/clocking_system/report/clocking_report_test/: clocking_report_test.json
clocking_system/clocking_system/web_form/clocking/: clocking.js  clocking.json
(+7 files in other folders)
